#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-13
1015-02-06 David Schneider
- create new groups CalibCycle:xxxx/EndData only if new data shows up in ConfigStore during endcalibcycle. Track JIRA PSAS-101.
- add parameter split_cc_in_subdir to put split scan calib cycles in a subdirectory, JIRA PSAS-104 and JIRA PSWA-32
- bump schema version from 4 to 5 due to possible new EndData group.
- add file TestEndDataPsanaMod.py for future use with testing the EndData feature.

Tag: V00-02-12
1015-2-5 David Schneider
- incorporate fastindex_02 tag from fastindex branch into trunk. 
- tracks JIRA PSAS-98 to get fast translation in live/online mode. fastindex is
  a temporary, less robust solution until small data PSAS-85 makes more progress.
  At that point we should remove fastindex.
	
Tag: V00-02-11
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103
	
Tag: V00-02-10
2015-2-3 David Schneider
- clean up issue with modifiying generated code to exclude small data.
  Wrote new ddl_Translator driver script that excludes it.
- support DEVEL as well. Track JIRA PSAS-103

Tag: V00-02-09
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103. Note issue with smlData. Some generated code was modified in this package.

Tag: V00-02-08
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-02-07
2014-10-23 David Schneider